--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <div class="jumbotron">
+        <h1 class="display-4 text-center">Music Library Search</h1>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col">Album</th>
+                        <th scope="col">Artist</th>
+                        <th scope="col">Genre</th>
+                        <th scope="col">Release Date</th>
+                    </tr>
+                    </thead>
+                    <tbody id="jsonData">
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
