--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">
+            <div class="col-lg-3">
+                
+            </div>
+            <div class="col-lg-9">
                 <table class="table">
                     <thead>
                     <tr>
