added input fields

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                 <table class="table">
                     <thead> 
                     <tr class="tbl">
-                        <th scope="col"><span id="title">Title</span></th>
-                        <th scope="col"><span id="album">Album</span></th>
-                        <th scope="col"><span id="artist">Artist</span></th>
-                        <th scope="col"><span id="genre">Genre</span></th>
-                        <th scope="col"><span id="date">Release Date</span></th>
+                        <th scope="col"><input class="hidden" id="titleBtn" type = "text" value="Title"/><span id="title">Title</span></th>
+                        <th scope="col"><input class="hidden" id="albumBtn" type = "text" value="Album"/><span id="album">Album</span></th>
+                        <th scope="col"><input class="hidden" id="artistBtn" type = "text" value="Artist"/><span id="artist">Artist</span></th>
+                        <th scope="col"><input class="hidden" id="genreBtn" type = "text" value="Genre"/><span id="genre">Genre</span></th>
+                        <th scope="col"><input class="hidden" id="dateBtn" type = "text" value="Release Date"/><span id="date">Release Date</span></th>
                     </tr>
                     </thead>
-                    <tbody id="jsonData">
+                    <tbody id="jsonData"> 
 
                     </tbody>
                 </table>
