--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="row">
             <div class="col-lg-1">
                     
-                    <button id="btn" class="btn btn-primary">Search</button>
-                    <button id="reset" class="btn btn-primary">Reset</button>
+                    <button id="btn" class="btn">Search</button>
+                    <button id="reset" class="btn">Reset</button>
 
             </div>
             <div class="col-lg-11">
