fixed Releasedate id

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <th scope="col"><input class="hidden" id="albumInput" type = "text" value="Album"/><span id="album">Album</span></th>
                         <th scope="col"><input class="hidden" id="artistInput" type = "text" value="Artist"/><span id="artist">Artist</span></th>
                         <th scope="col"><input class="hidden" id="genreInput" type = "text" value="Genre"/><span id="genre">Genre</span></th>
-                        <th scope="col"><input class="hidden" id="dateInput" type = "text" value="Release Date"/><span id="date">Release Date</span></th>
+                        <th scope="col"><input class="hidden" id="releaseDateInput" type = "text" value="Release Date"/><span id="releaseDate">Release Date</span></th>
                     </tr>
                     </thead>
                     <tbody id="jsonData"> 
